--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -64,9 +64,11 @@
                                 <a href="#" class='subicon-href'><img class='thread_subicons'
                                         src="{% static 'images/flag.png' %}" alt="" srcset=""> Report</a>
                                 <a href="#" class='subicon-href'><img class='thread_subicons'
-                                        src="{% static 'images/.png' %}" alt="" srcset=""> Save</a>
-                                <a href="#" class='subicon-href'><img class='thread_subicons' src="" alt="" srcset="">
-                                    ...</a>
+                                        src="{% static 'images/save.png' %}" alt="" srcset=""> Save</a>
+                                <a href="{% url 'users:follow_user' read_thread.0.user %}" class='subicon-href'>
+                                    <img class='thread_subicons' src="{% static 'images/follow.png' %}" alt=""
+                                        srcset="">
+                                    Follow</a>
 
                                 {% comment %} <a href="" class='subicon-href'><img class='subicons'
                                         src="{% static 'images/hide.png' %}" alt="" srcset=""> Hide</a> {% endcomment %}
@@ -160,13 +162,15 @@
                                         <div class="thread-content-subpanel-wrapper">
 
                                             {% comment %} upvote/downvote {% endcomment %}
-                                            <a href="{% url 'threads:like_comment' item.id %}">
-                                                <img src="{% static 'images/upvote.png' %}" alt="" srcset="">
-                                            </a>
-                                            {{item.likes}}
-                                            <a href="{% url 'threads:dislike_comment' item.id %}">
-                                                <img src="{% static 'images/downvote.png' %}" alt="" srcset="">
-                                            </a>
+                                            <div class="thread-content-likes">
+                                                <a href="{% url 'threads:like_comment' item.id %}">
+                                                    <img src="{% static 'images/upvote.png' %}" alt="" srcset="">
+                                                </a>
+                                                {{item.likes}}
+                                                <a href="{% url 'threads:dislike_comment' item.id %}">
+                                                    <img src="{% static 'images/downvote.png' %}" alt="" srcset="">
+                                                </a>
+                                            </div>
                                             {% comment %} --------------------------------- {% endcomment %}
 
                                             <a href="" class='subicon-href'><img class='thread_subicons'
@@ -179,9 +183,10 @@
                                             <a href="#" class='subicon-href'><img class='thread_subicons'
                                                     src="{% static 'images/flag.png' %}" alt="" srcset=""> Report</a>
                                             <a href="#" class='subicon-href'><img class='thread_subicons'
-                                                    src="{% static 'images/.png' %}" alt="" srcset=""> Save</a>
+                                                    src="{% static 'images/save.png' %}" alt="" srcset=""> Save</a>
                                             <a href="{% url 'users:follow_user' item.user %}" class='subicon-href'><img
-                                                    class='thread_subicons' src="" alt="" srcset="">
+                                                    class='thread_subicons' src="{% static 'images/follow.png' %}"
+                                                    alt="" srcset="">
                                                 Follow</a>
 
                                             {% comment %} <a href="" class='subicon-href'><img class='subicons'
