--- a/static/CSS/maincontent.css
+++ b/static/CSS/maincontent.css
@@ -181,8 +181,10 @@
     text-decoration: none;
     align-items: center;
     color: black;
-    margin-right: 10px;
+    margin-right: 1px;
+    margin-left: 5px;
 }
+
 
 
 .sidebar-wrap {
