--- a/static/CSS/threads.css
+++ b/static/CSS/threads.css
@@ -35,15 +35,16 @@
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-    width: 60vw;
-    
-   
+    width: 96%;
+
 }
 
 #thread-full-image {
-    height: 60vh;
-    width: 60vw;
+
     border-radius: 4px;
+    max-width: 100%;
+    max-height: 600px;
+  
 }
 
 .thread-content-text {
@@ -59,11 +60,15 @@
     width: 100%;
     height: 15px;
     font-size: 12px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
 }
+
 
 .thread_subicons {
     height: 20px;
     width: 20px;
+    z-index: 1;
 }
 
 .thread-content-likes {
@@ -71,6 +76,14 @@
     align-items: center;
     margin-left: -3px;
     margin-right: 8px;
+    height: 20px;
+
+}
+
+.thread-content-likes h5 {
+    margin: 0;
+    padding: 0;
+    margin-top: -3px;
 }
 
 
@@ -126,7 +139,9 @@
 }
 
 ul {
+   
     padding-left: 20px;
+  
 }
 
 .comment-section-profile a {
@@ -162,7 +177,46 @@ li {
     list-style: none;
     margin-bottom: 9px;
     margin-top: 5px;
-   
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.comment-reply-dropdown {
+    visibility: hidden;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.-visible {
+    visibility: visible;
+    opacity: 1;
+    width: 50%;
+    height: 180px;
+    border-left: 2px solid black;
+    padding-left: 10px;
+    padding-top: 10px;
+    
 
 }
 
+.reply-button {
+    display: flex;
+    align-items: center;
+    color: black;
+    z-index: 5;
+    padding-left: 20px;
+    margin-left: -20px;
+}
+
+.subicon-href-reply {
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+}
+
+.subicon-href-reply img {
+    margin-right: 1px;
+}
