--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -162,40 +162,56 @@
                                                 <a href="{% url 'threads:like_comment' item.id %}">
                                                     <img src="{% static 'images/upvote.png' %}" alt="" srcset="">
                                                 </a>
-                                                {{item.likes}}
+                                                <h5>
+                                                    {{item.likes}}
+                                                </h5>
                                                 <a href="{% url 'threads:dislike_comment' item.id %}">
                                                     <img src="{% static 'images/downvote.png' %}" alt="" srcset="">
                                                 </a>
+
+                                                {% comment %} --------------------------------- {% endcomment %}
+                                                <div class="subicon-href-reply">
+                                                    <img class='thread_subicons' src="{% static 'images/comment.png' %}"
+                                                        alt="" srcset="">
+                                                    <div class='reply-button' id='reply-button'>
+                                                        Reply
+                                                    </div>
+                                                </div>
+                                                {% comment %} on click load form {% endcomment %}
+
+                                                <a href="" class='subicon-href'><img class='thread_subicons'
+                                                        src="{% static 'images/award.png' %}" alt="" srcset="">
+                                                    Award</a>
+                                                <a href="" class='subicon-href'><img class='thread_subicons'
+                                                        src="{% static 'images/share.png' %}" alt="" srcset="">
+                                                    Share</a>
+                                                <a href="#" class='subicon-href'><img class='thread_subicons'
+                                                        src="{% static 'images/flag.png' %}" alt="" srcset="">
+                                                    Report</a>
+                                                <a href="#" class='subicon-href'><img class='thread_subicons'
+                                                        src="{% static 'images/save.png' %}" alt="" srcset=""> Save</a>
+                                                <a href="{% url 'users:follow_user' item.user %}"
+                                                    class='subicon-href'><img class='thread_subicons'
+                                                        src="{% static 'images/follow.png' %}" alt="" srcset="">
+                                                    Follow</a>
                                             </div>
-                                            {% comment %} --------------------------------- {% endcomment %}
-                                            <a href="" class='subicon-href'><img class='thread_subicons'
-                                                    src="{% static 'images/comment.png' %}" alt="" srcset="">
-                                                Reply
-                                            </a>
-                                            {% comment %} on click load form {% endcomment %}
+                                        </div>
+                                        <div class="comment-reply-dropdown">
                                             <form action="{% url 'threads:comment_thread_child' item.path %}"
                                                 method='POST'>{% csrf_token %}
-                                                <button type="submit">submit</button>
-                                            </form>
-                                            <a href="" class='subicon-href'><img class='thread_subicons'
-                                                    src="{% static 'images/award.png' %}" alt="" srcset=""> Award</a>
-                                            <a href="" class='subicon-href'><img class='thread_subicons'
-                                                    src="{% static 'images/share.png' %}" alt="" srcset=""> Share</a>
-                                            <a href="#" class='subicon-href'><img class='thread_subicons'
-                                                    src="{% static 'images/flag.png' %}" alt="" srcset=""> Report</a>
-                                            <a href="#" class='subicon-href'><img class='thread_subicons'
-                                                    src="{% static 'images/save.png' %}" alt="" srcset=""> Save</a>
-                                            <a href="{% url 'users:follow_user' item.user %}" class='subicon-href'><img
-                                                    class='thread_subicons' src="{% static 'images/follow.png' %}"
-                                                    alt="" srcset="">
-                                                Follow</a>
+                                                <div class="comment_input-wrap">
 
-                                            {% comment %} <a href="" class='subicon-href'><img class='subicons'
-                                                    src="{% static 'images/hide.png' %}" alt="" srcset=""> Hide</a>
-                                            {% endcomment %}
-                                            {% comment %} <a href="" class='subicon-href'><img class='subicons'
-                                                    src="{% static 'images/expand.png' %}" alt="" srcset=""></a>
-                                            {% endcomment %}
+                                                    <textarea name="text" id="comment_input" cols="30" rows="10"
+                                                        placeholder="What are your thoughts?"></textarea>
+
+                                                    <div class="input-text-button-wrap">
+                                                        Bold, italics, url, strikethrough, etc
+
+
+                                                        <input type="submit" value="Reply">
+                                                    </div>
+                                                </div>
+                                            </form>
                                         </div>
                                     </div>
                                     {% for close in info.close %}
