--- a/static/CSS/threads.css
+++ b/static/CSS/threads.css
@@ -96,9 +96,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 175px;
+    min-height: 175px;
     width: 50vw;
     border-radius: 4px;
+    height: fit-content;
     border: 1px solid rgb(139, 138, 138);
     background-color: rgb(84, 82, 81);
 }
@@ -110,6 +111,8 @@
     width: 47vw;
     border: none;
     background-color: rgb(84, 82, 81);
+    resize: none;
+
 
 
 }
@@ -215,6 +218,10 @@ li {
     display: flex;
     align-items: center;
     margin-left: 5px;
+}
+
+.subicon-href-reply:hover {
+    cursor: pointer;
 }
 
 .subicon-href-reply img {
