--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -236,14 +236,45 @@
     <div class="sidebar-wrap">
         <h1>sidebar</h1>
         {% for each in treez %}
+        {% if each.children == True %}
         <ul>
             <li>
-                {{each}}
+                {% else %}
             </li>
         </ul>
-        <br>
+        {% endif %}
+
+        {{each.data.text}}
+        {% for ind in each.children %}
 
 
+        {% for word in ind.data %}
+
+        {{word}}
+        {% if each.children == False %}
+        </li>
+        </ul>
+        {% endif %}
+        {% endfor %}
+        {% endfor %}
+
+        {% comment %} {{each.children}} {% endcomment %}
+
+        {% comment %} {% if  %}
+        <ul>
+            <li>
+                {% else %}
+            </li>
+        </ul>
+        {% endif %}
+        {{each}}
+
+        {% for  in  %}
+        </li>
+        </ul>
+        {% endfor %}
+
+        {% endcomment %}
         {% endfor %}
 
 
