--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -84,7 +84,7 @@
                             <a href="{% url "users:profile" request.user %}">
                                 {{request.user}}
                             </a>
-                            <form action="{% url 'threads:comment_thread' read_thread.0.id %}" method="post">
+                            <form action="{% url 'threads:comment_thread_child' read_thread.0.path %}" method="post">
                                 {% csrf_token %}
 
 
@@ -105,9 +105,13 @@
                         </div>
 
                         <div class="comment-section-wrap">
-                            {% for each in roots %}
-                            {% for item, info in each %}
+
+                            {% comment %} {% for each in roots %} {% endcomment %}
+                            {% for item, info in roots|slice:"1:" %}
                             {% if info.open %}
+
+                            {% comment %} {% verbatim  %} {% if item.path  %}{% endif %} {% endverbatim  %}
+                            {% endcomment %}
                             <ul class='comment-section-list'>
 
                                 <div class="comment-section-profile">
@@ -202,7 +206,7 @@
                                                 method='POST'>{% csrf_token %}
                                                 <div class="comment_input-wrap">
 
-                                                    <textarea name="reply" id="comment_input" cols="30" rows="10"
+                                                    <textarea name="text" id="comment_input" cols="30" rows="10"
                                                         placeholder="What are your thoughts?"></textarea>
 
                                                     <div class="input-text-button-wrap">
@@ -219,7 +223,6 @@
                                     {% for close in info.close %}
                                 </li>
                             </ul>
-                            {% endfor %}
                             {% endfor %}
                             {% endfor %}
 
